--- a/vue-practice/vue-learn-demo/index.html
+++ b/vue-practice/vue-learn-demo/index.html
@@ -12,6 +12,11 @@
 	<li><a href="demo/v-if.html">v-if & v-else & v-show</a></li>
 	<li><a href="demo/v-for.html">v-for</a></li>
 	<li><a href="demo/v-text.html">v-text & v-html</a></li>
+	<li><a href="demo/v-on.html">v-on</a></li>
+	<li><a href="demo/v-model.html">v-model 数据源绑定</a></li>
+	<li><a href="demo/v-bind.html">v-bind 实例</a></li>
+	<li><a href="demo/others.html">v-pre & v-cloak & v-once</a></li>
+</ol>
 </ol>
 </body>
 </html>
