--- a/vue-practice/vue-learn-demo/demo/v-text.html
+++ b/vue-practice/vue-learn-demo/demo/v-text.html
@@ -10,13 +10,16 @@
 <div id='app'>
 	<span>{{message}}</span>
 	<span v-text="message"></span>
+	<br />
+	<span v-html='dodo'></span>
 </div>
 <script src='../assets/js/vue.js'></script>	
 <script>
 new Vue({
 	el: '#app',
 	data: {
-		message: 'hello,world!'
+		message: 'hello,world!',
+		dodo: '<h2>hello,vue!</h2>'
 	}
 })
 
