--- a/vue-practice/vue-learn-demo/index.html
+++ b/vue-practice/vue-learn-demo/index.html
@@ -7,6 +7,7 @@
 <body>
 <h1>vue.js实例</h1>	
 <hr />
+<h2>第一季：内部指令</h2>
 <ol>
 	<li><a href="demo/hello,world.html">Hello,world! 实例</a></li>
 	<li><a href="demo/v-if.html">v-if & v-else & v-show</a></li>
@@ -16,6 +17,17 @@
 	<li><a href="demo/v-model.html">v-model 数据源绑定</a></li>
 	<li><a href="demo/v-bind.html">v-bind 实例</a></li>
 	<li><a href="demo/others.html">v-pre & v-cloak & v-once</a></li>
+</ol>
+<h2>第二季：全局API</h2>
+<ol>
+	<li><a href="demo/Vue.directive.html">Vue.directive 自定义指令</a></li>
+	<li><a href="demo/Vue.extend.html">Vue.extend 扩展实例构造器</a></li>
+	<li><a href="demo/Vue.set.html">Vue.set 全局操作</a></li>
+	<li><a href="demo/smzq.html">Vue的生命周期</a></li>
+	<li><a href="demo/template.html">Template 模板</a></li>
+	<li><a href="demo/component-1.html">component-1</a></li>
+	<li><a href="demo/component-2.html">component-2</a></li>
+	<li><a href="demo/component-3.html">component-3</a></li>
 </ol>
 </ol>
 </body>
