--- a/vue-practice/vue-learn-demo/index.html
+++ b/vue-practice/vue-learn-demo/index.html
@@ -28,6 +28,7 @@
 	<li><a href="demo/component-1.html">component-1</a></li>
 	<li><a href="demo/component-2.html">component-2</a></li>
 	<li><a href="demo/component-3.html">component-3</a></li>
+	<li><a href="demo/component-4.html">component-4</a></li>
 </ol>
 </ol>
 </body>
