--- a/vue-practice/vue-learn-demo/index.html
+++ b/vue-practice/vue-learn-demo/index.html
@@ -30,6 +30,14 @@
 	<li><a href="demo/component-3.html">component-3</a></li>
 	<li><a href="demo/component-4.html">component-4</a></li>
 </ol>
+<h2>第三季：构造器里的选项</h2>
+<ol>
+	<li><a href="demo/propsData.html">propsData Option</a></li>
+	<li><a href="demo/computed.html">computed Option</a></li>
+	<li><a href="demo/methods.html">Methods Option</a></li>
+	<li><a href="demo/watch.html">watch Option</a></li>
+	<li><a href="demo/mixins.html">mixins Option</a></li>
+	<li><a href="demo/extends.html">extends Option</a></li>
 </ol>
 </body>
 </html>
