--- a/vue-practice/vue-learn-demo/index.html
+++ b/vue-practice/vue-learn-demo/index.html
@@ -39,5 +39,10 @@
 	<li><a href="demo/mixins.html">mixins Option</a></li>
 	<li><a href="demo/extends.html">extends Option</a></li>
 </ol>
+<h2>第四季：Vue实例和内部组件</h2>
+<ol>
+	<li><a href="demo/example01.html">example methods</a></li>
+
+</ol>
 </body>
 </html>
