--- a/vue-practice/vue-learn-demo/index.html
+++ b/vue-practice/vue-learn-demo/index.html
@@ -41,8 +41,9 @@
 </ol>
 <h2>第四季：Vue实例和内部组件</h2>
 <ol>
-	<li><a href="demo/example01.html">example methods</a></li>
-
+	<li><a href="demo/example01.html">实例入门</a></li>
+	<li><a href="demo/example02.html">example methods</a></li>
+	<li><a href="demo/example03.html">实例事件</a></li>
 </ol>
 </body>
 </html>
